# minesweeper

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  mainwindow.ui  minesweeper.cpp
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appguiminesweeper_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appguiMinesweeper.cmake
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appguiMinesweeper.cmake  Qt6_QmlPlugins_Imports_appguiMinesweeper.rsp
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.rcc/: appguiMinesweeper_raw_qml_0.qrc  qmake_guiMinesweeper.qrc
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.rcc/qmlcache/: appguiMinesweeper_Main_qml.cpp  appguiMinesweeper_qml_loader_file_list.rsp  appguiMinesweeper_qmlcache_loader.cpp
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/appguiMinesweeper_autogen/: deps
guiMinesweeper/build-guiMinesweeper-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/guiMinesweeper/: Main.qml  appguiMinesweeper_qml_module_dir_map.qrc  qmldir
guiMinesweeper/guiMinesweeper/: CMakeLists.txt  Main.qml  gamemodel.cpp  gamemodel.h  main.cpp
(+38 files in other folders)
